# clang-exercise

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
src/: client.c  client.h  main.c
test/: CMakeLists.txt  cpputest.cpp
